fix(feature): SkyBlock Resource Pack with new symbols
- Add temp multi symbol check
- Also strip color codes and remove color codes in the Pattern

(cherry picked from commit d46557cb080049cefaf4e4a4503d2669d955baef)